Add cep and cnpj masks

--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
 
                         <div>
                             <label for="cnpj">CNPJ</label>
-                            <input type="text" name="cnpj" id="cnpj">
+                            <input type="text" name="cnpj" id="cnpj" data-inputmask="'mask': '99.999.999/9999-99'">
                         </div>
 
                         <div>
                             <label for="cep">CEP</label>
-                            <input type="text" name="cep" id="cep" required>
+                            <input type="text" name="cep" id="cep" data-inputmask="'mask': '99999-999'" required>
                         </div>
 
                         <div>
