Add no validation anchor

--- a/index.html
+++ b/index.html
@@ -267,7 +267,10 @@
                                 </div>
                                 <p class="helper-message">Os recipientes disponíveis são definidos pelo tipo de resíduo.</p>
                             </div>
-    
+
+                            <hr>
+                            <p>Caso não tenha certeza, <a href="#" data-action="informacoes-pessoais" data-ignore-validation>clique aqui</a>.</p>
+
                             <div class="nav-buttons">
                                 <button data-action="informacoes-pessoais" class="submit">Avançar</button>
                             </div>
