--- a/index.html
+++ b/index.html
@@ -361,23 +361,7 @@
                         </header>
                         <div class="content">
                             <div>
-                                <div>
-                                    <div>
-                                        <h3>Resíduo</h3>
-                                        <p data-bind="residuo:nome"></p>
-                                    </div>
-                                    <div>
-                                        <h3>Frequência</h3>
-                                        <p data-bind="frequencia"></p>
-                                    </div>
-                                    <div>
-                                        <h3>Recipientes</h3>
-                                        <p data-bind="recipientes"></p>
-                                        <div>
-                                            <button data-action="calculo-montante" class="btn__secondary btn__secondary--edit">Editar</button>
-                                        </div>
-                                    </div>
-                                </div>
+                                <div data-history></div>
                                 <div>
                                     <h3>Informações de Contato</h3>
                                     <p data-bind="contato"></p>
